Style: Fix text cutoff when meta expands and extend Swiper to full screen width

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,8 @@ body {
   min-height: 0;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-y: visible;
+  overflow-x: hidden;
 }
 
 .roulette-source-text {
@@ -261,7 +262,9 @@ body {
 
 /* ===== CAROUSEL RESULT (2-5 MOVIES) ===== */
 .swiper {
-  width: 100%;
+  width: calc(100% + 32px);
+  margin-left: -16px;
+  margin-right: -16px;
   padding-top: 20px;
   padding-bottom: 30px;
 }
